--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,3 +5,5 @@ idf_component_register(SRCS  ${SOURCES}
                     "sdcard"
 
         )
+
+spiffs_create_partition_image(storage ../spiffs FLASH_IN_PROJECT)
